@@ -1,3 +1,10 @@
+2020-05-25  Andreas Scherer  <https://ascherer.github.io>
+
+	* bibtex.ch,
+	* mft.ch,
+	* tangle.ch,
+	* weave.ch: Spell checking with 'aspell -l en_US'.
+
 2020-05-24  Andreas Scherer  <https://ascherer.github.io>
 
 	* dvicopy.web,
