@@ -1,3 +1,7 @@
+2020-05-26  Andreas Scherer  <https://ascherer.github.io>
+
+	* texinputs/pdfwebtocfront.tex: Fake headline on page after TOC.
+
 2020-05-23  Andreas Scherer  <https://ascherer.github.io>
 
 	* texinputs/pdfwebtocfront.tex: Add treatment for {pdf,xe}tex.web.
